# return-stacking-backtesting

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: refresh-data.yml
blog/: article.md
data/: etf_prices.parquet
scripts/: refresh_data.py
